# sealbox

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security.yml
.github/workflows/: ci.yml  quality.yml  release.yml  security.yml
docs/: cli-reference.md  configuration.md  getting-started.md  multi-client-architecture.md  web-ui.md
sealbox-cli/: Cargo.toml
sealbox-cli/src/: config.rs  crypto.rs  main.rs  output.rs
sealbox-cli/src/commands/: client_commands.rs  config_commands.rs  key_commands.rs  mod.rs  secret_commands.rs
sealbox-server/: Cargo.toml
sealbox-server/src/: config.rs  crypto.rs  error.rs  lib.rs  main.rs
sealbox-server/src/api/: app.rs  auth.rs  enroll.rs  mod.rs  path.rs  state.rs
sealbox-server/src/api/handler/: admin.rs  client.rs  client_key.rs  master_key.rs  mod.rs  secret.rs
sealbox-server/src/crypto/: client_key.rs  data_key.rs  master_key.rs  mod.rs
sealbox-server/src/repo/: mod.rs  sqlite.rs
sealbox-server/src/repo/sqlite/: client_key.rs  enroll.rs  health.rs  master_key.rs  mod.rs  secret.rs  secret_client_key.rs  secret_master_key.rs
sealbox-web/: .gitignore  .prettierignore  package.json  pnpm-lock.yaml
sealbox-web/src/: routeTree.gen.ts
sealbox-web/src/assets/images/logos/: README.md  SETUP.md
sealbox-web/src/components/: error-boundary.tsx
sealbox-web/src/components/auth/: auth-guard.tsx
sealbox-web/src/components/brand/: adaptive-logo.tsx  sealbox-logo.tsx
sealbox-web/src/components/clients/: add-client-dialog.tsx
sealbox-web/src/components/common/: content-card.tsx  countdown-timer.tsx  custom-radio-item.tsx  data-section.tsx  empty-state.tsx  error-state.tsx  html-attributes.tsx  loading-skeletons.tsx  search-input.tsx  stat-badge.tsx  status-dot.tsx
sealbox-web/src/components/i18n/: language-selector.tsx
sealbox-web/src/components/layout/: app-shell.tsx  language-selector.tsx  main-layout.tsx  navigation.tsx  page-container.tsx  page-header.tsx  page-layout.tsx  theme-selector.tsx
sealbox-web/src/components/secrets/: create-secret-dialog.tsx  edit-secret-dialog.tsx  permissions-dialog.tsx  secret-cards.tsx  secret-controls.tsx  secret-stats.tsx  secret-table.tsx  view-secret-dialog.tsx
sealbox-web/src/components/theme/: theme-provider.tsx  theme-toggle.tsx
sealbox-web/src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  confirm-dialog.tsx  language-selector.tsx  layered-background.tsx  loading-skeletons.tsx  sealbox-logo.tsx  sheet.tsx  sonner.tsx  table.tsx  theme-toggle.tsx  user-menu.tsx
sealbox-web/src/hooks/: use-api.ts  useSSRSafeTranslation.ts  useSecretFiltering.ts  useSecretManagement.ts  useServerStatus.ts
sealbox-web/src/lib/: api.ts  i18n.ts  query-client.ts  secret-utils.ts  types.ts
sealbox-web/src/locales/: de.json  en.json  ja.json  zh.json
sealbox-web/src/routes/: __root.tsx  clients.tsx  docs.tsx  index.tsx  keys.tsx  login.tsx  settings.tsx
sealbox-web/src/stores/: auth.ts  config.ts
sealbox-web/src/styles/: app.css
