[workspace]
members = ["sealbox-server", "sealbox-cli"]
resolver = "2"

[workspace.package]
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = "0.40.1"
serde_with = "3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.37.0", features = ["bundled", "uuid"] }
rsa = { version = "0.9", features = ["pem"] }
rand = "0.9"
aes-gcm = "0.10"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
dotenvy = "0.15"
config = "0.15"
clap = { version = "4.5", features = ["derive"] }
time = "0.3"
http = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["request-id", "trace", "cors"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
assert_cmd = "2.1"
tempfile = "3.23"
