[package]
name = "sealbox-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
sealbox-server = { path = "../sealbox-server" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rsa = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting", "local-offset"] }
