[package]
name = "sealbox-server"
version = "0.1.0"
edition = "2024"
authors = ["luckywood <morrisliu1994@outlook.com>"]
description = "Sealbox: A Simple Secret Storage Service – self-hosted and developer-friendly."
license = "Apache-2.0"
repository = "https://github.com/realmorrisliu/sealbox"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
assert_cmd = { workspace = true }
tempfile = { workspace = true }

[features]
default = []

[lib]
name = "sealbox_server"
path = "src/lib.rs"

[[bin]]
name = "sealbox-server"
path = "src/main.rs"
